tests/invalid/Lambda_Invalid_9.whiley
function f(int x) -> void:
    return 1
